--- a/src/main/java/vista/frmMenu.form
+++ b/src/main/java/vista/frmMenu.form
@@ -67,7 +67,7 @@
         </Menu>
         <Menu class="javax.swing.JMenu" name="jMenu2">
           <Properties>
-            <Property name="text" type="java.lang.String" value="Hospitalizacion"/>
+            <Property name="text" type="java.lang.String" value="Hospedaje"/>
             <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
               <Dimension value="[150, 50]"/>
             </Property>
